--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>YeomanUsersApiAndBackboneApp</title>
+        <title>yeoman_users_api_and_backbone_app</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -34,7 +34,7 @@
                     <li><a href="#users"><span class="glyphicon glyphicon-list"></span> List Users</a></li>
                     <li><a href="#users/new"><span class="glyphicon glyphicon-plus"></span> Add User</a></li>
                 </ul>
-                <h3 class="text-muted">YeomanUsersApiAndBackboneApp</h3>
+                <h3 class="text-muted">Simple CRUD application built with Backbone, Express and MongoDB</h3>
             </div>    
 
             <!-- <div class="jumbotron">
